Removed traces of Niivo